src/objects/FieloCMS__Component__c.object
<CustomObject>
    <fields>
        <fullName>FieloCMSELR_Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course</label>
        <referenceTo>FieloELR__Course__c</referenceTo>
        <relationshipLabel>Components</relationshipLabel>
        <relationshipName>FieloCMSELR_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCMSELR_CustomDetailParameter__c</fullName>
        <label>Custom Detail Parameter</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCMSELR_FilterByDependency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filter By Dependency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCMSELR_FilterByNotTaken__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filter By Not Taken</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCMSELR_FilterBySegment__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Filter By Segment</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>